Added admin functionality for events
