# Backend/controllers/eventController.js
@@ -1,31 +1,13 @@
 const User = require("../models/User");
 const Event = require("../models/Event");
+const otpGenerator = require("otp-generator");
 
-exports.createEvent = async (req, res) => {
+exports.getEnrolledEvents = async (req, res) => {
 	try {
-		const { eventId, name, description, date, time } = req.body;
-		const event = new Event({
-			eventId,
-			name,
-			description,
-			date,
-			time,
-		});
-		const savedEvent = await event.save();
-		console.log("Event created!");
-		return res
-			.status(201)
-			.json({ msg: "Event created!", event: savedEvent });
-	} catch (err) {
-		console.log(err);
-		return res.status(500).json({ msg: "Server Error" });
-	}
-};
-
-exports.getAllEvents = async (req, res) => {
-	try {
-		const events = await Event.find();
-		return res.json({ events });
+		const { events: enrolledEvents } = await User.findOne({
+			email: req.userEmail,
+		}).select("-_id events");
+		return res.json({ email: req.userEmail, enrolledEvents });
 	} catch (err) {
 		console.log(err);
 		return res.status(500).json({ msg: "Server Error" });
@@ -35,9 +17,20 @@ exports.getAllEvents = async (req, res) => {
 exports.enrollEvent = async (req, res) => {
 	try {
 		const eventId = req.params.eventId;
+		console.log(eventId);
 		const user = await User.findOne({ email: req.userEmail });
+		const event = await Event.findOne({ eventId });
+		console.log(event);
+		event.registeredUsers.push(user._id);
 		user.events.push(eventId);
+		user.eventRegistrationId =
+			"ITE-" +
+			otpGenerator.generate(8, {
+				lowerCaseAlphabets: false,
+				specialChars: false,
+			});
 		const savedUser = await user.save();
+		const savedEvent = await event.save();
 		return res.json({
 			msg: "Event enrolled",
 			email: savedUser.email,
